# arcane-mage

./: CHANGELOG.md  README.md  TESTPLAN.md  pyproject.toml  testing123.yaml
ansible_collection/runonflux/arcane_mage/: README.md  galaxy.yml
ansible_collection/runonflux/arcane_mage/plugins/modules/: deprovision.py  iso_info.py  provision.py  status.py  validate.py
docs/: configuration.md  keyring.md  proxmox-setup.md
examples/: all_settings.yaml  merge_anchors.yaml  minimal.yaml  typical.yaml
src/arcane_mage/: __init__.py  __main__.py  arcane_mage.py  batch.py  fat_writer.py  helpers.py  log.py  models.py  password.py  provisioner.py  proxmox.py  tpm_keyring.py
src/arcane_mage/images/: __init__.py
src/arcane_mage/models/: __init__.py  cluster.py  config.py  delegate.py  fluxnode.py  hypervisor.py  identity.py  installer.py  network.py  notifications.py  system.py
src/arcane_mage/screens/: hypervisor.py  provisioning_info.py  welcome_proxmox.py
tests/: conftest.py  test_batch.py  test_fat_writer.py  test_helpers.py  test_password.py  test_provisioner.py  test_proxmox.py  test_public_api.py
tests/test_models/: test_cluster.py  test_config_group.py  test_delegate.py  test_fluxnode.py  test_hypervisor.py  test_identity.py  test_installer.py  test_network.py  test_notifications.py  test_system.py
