[project]
name = "arcane-mage"
version = "0.4.2"
description = "Automation helper for Fluxnodes"
readme = "README.md"
authors = [
    { name = "David White", email = "david@runonflux.io" }
]
requires-python = ">=3.13.0"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.13.3",
    "email-validator>=2.2.0",
    "httpx>=0.28.1",
    "pydantic>=2.11.4",
    "pyfatfs>=1.1.0",
    "pyroute2>=0.9.2",
    "python-iptables>=1.2.0",
    "pyrage>=1.3.0",
    "pyyaml>=6.0.2",
    "textual>=3.2.0",
    "keyring>=25.6.0,<25.7",
    "pyescrypt>=0.1.0",
    "click>=8.2.1",
    "cryptography>=46.0.5",
]

[project.scripts]
arcane-mage = "arcane_mage.__main__:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/arcane_mage"]

[dependency-groups]
dev = [
    "ruff>=0.11.13",
    "textual-dev>=1.7.0",
    "types-aiofiles>=24.1.0.20250326",
    "types-pyyaml>=6.0.12.20250402",
]
